# CHIP-8

./: .gitignore  CHIP-8.sln  README.md
CHIP-8/: CHIP-8.cpp  CHIP-8.hpp  CHIP-8.vcxproj  CHIP-8.vcxproj.filters  data-types.hpp  debugger.cpp  debugger.hpp  executor.cpp  executor.hpp  executors-data.cpp  executors-data.hpp  font-data.hpp  helpers.cpp  helpers.hpp  keyboard-data.hpp  keyboard.cpp  keyboard.hpp  machine-specs.hpp  main.cpp
Frontend-C++-SFML/: Frontend-C++-SFML.vcxproj  main.cpp
Python-Frontend/: PropertySheet.props  PyCHIP8.cpp  Python-Frontend.vcxproj  Python-Frontend.vcxproj.filters
Python-Frontend/CHIP8/: main.py  pyproject.toml
Python-Frontend/CHIP8/PyCHIP8/: emulator.py  gui.py
Python-Frontend/CHIP8/PyCHIP8/gui/: debug.py  main.py
Python-Frontend/CHIP8/PyCHIP8/gui/debugger/: memory.py  registers.py
Python-Frontend/CHIP8/PyCHIP8/gui/main_emulator/: actions.py  main.py
Python-Frontend/CHIP8/PyCHIP8/host/: consts.py  helpers.py
