[tool.poetry]
name = "chip8"
version = "0.1.0"
description = ""
authors = ["Abhishek Kumar <abhi.kr.2100@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
pygame = "^2.5.2"
pyside6 = "^6.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
